# dvcli

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyoxidizer.bzl  pyproject.toml  requirements-dev.txt  setup.py
config/: dvcli.yml.example
dvcli/: __main__.py  cli.py  main.py  util.py
dvcli/controllers/: base.py
dvcli/core/: exc.py
dvcli/user/: __init__.py  cli.py  collection.py  dataset.py  dataverse.py  upload.py  util.py
tests/: test_dvcli.py
